--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,4 @@
 (executable
  (public_name git_audit)
  (name main)
- (libraries lib))
+ (libraries lib core core_unix core_unix.sys_unix cmdliner))
