--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -13,6 +13,5 @@ jobs:
     - uses: actions/checkout@v4
     - uses: cachix/install-nix-action@v27
       with:
-
-    - run: nix build
-    - run: nix flake check
+        nix_path: nixpkgs=channel:nixos-unstable
+    - run: nix-build
