--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -13,5 +13,6 @@ jobs:
     - uses: actions/checkout@v4
     - uses: cachix/install-nix-action@v27
       with:
-        nix_path: nixpkgs=channel:nixos-unstable
+        github_access_token: ${{ secrets.GITHUB_TOKEN }}
     - run: nix-build
+    - run: nix flake check
