--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -13,6 +13,6 @@ jobs:
     - uses: actions/checkout@v4
     - uses: cachix/install-nix-action@v27
       with:
-        github_access_token: ${{ secrets.nix }}
+        github_access_token: ${{ secrets.NIX_BUILD_TOKEN }}
     - run: nix-build
     - run: nix flake check
