--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -11,8 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v27
+
+    - name: Setup Nix
+      uses: cachix/install-nix-action@v27
       with:
         github_access_token: ${{ secrets.NIX_BUILD_TOKEN }}
-    - run: nix-build
-    - run: nix flake check
+
+    - name: Check Flake Syntax
+      run: nix flake check
+
+    - name: Build Flake
+      run: nix-build
+
