--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -12,14 +12,14 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Setup Nix
+    - name: Setup Nix Environment
       uses: cachix/install-nix-action@v27
       with:
         github_access_token: ${{ secrets.NIX_BUILD_TOKEN }}
 
-    - name: Check Flake Syntax
+    - name: nix flake check
       run: nix flake check
 
-    - name: Build Flake
-      run: nix-build
+    - name:nix build
+      run: nix build
 
