docs: comment out access token

--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -14,6 +14,8 @@ jobs:
 
     - name: Setup Nix Environment
       uses: cachix/install-nix-action@v27
+      # with:
+      #   github_access_token: ${{ secrets.NIX_BUILD_TOKEN }}
 
     - name: nix flake check
       run: nix flake check
