--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -19,7 +19,11 @@ jobs:
 
     - name: nix flake check
       run: nix flake check
+      with:
+        github_access_token: ${{ secrets.NIX_BUILD_TOKEN }}
 
     - name: nix build
       run: nix build
+      with:
+        github_access_token: ${{ secrets.NIX_BUILD_TOKEN }}
 
