--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Setup Nix Environment
       uses: cachix/install-nix-action@v27
       with:
-        access_token: ${{ secrets.NIX_BUILD_TOKEN }}
+        github_access_token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: nix flake check
       run: nix flake check
